BIG commit - Added database support, added IDs to Settlements, added a few methods to SettlementManager

--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Daniel/Desktop/Games/Minecraft Stuff/Plugin Development/bukkit-1.7.5-R0.1-20140402.231158-6.jar"/>
+	<classpathentry kind="lib" path="/home/server/Downloads/bukkit-1.7.8-R0.1-20140414.042657-2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
