Added an admin command and attempted to fix safezones

--- a/plugin.yml
+++ b/plugin.yml
@@ -4,3 +4,5 @@ main: me.projectx.Settlements.Main
 commands:
   s:
     description: Base command for settlements
+  sa:
+    description: Admin command
