Some changes to Wars

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,12 @@ tmp/
 *.bak
 *.swp
 *~.nib
+*.eml
+*.iml
 local.properties
 .settings/
 .loadpath
+.idea/
 
 # External tool builders
 .externalToolBuilders/
